imputacion componentes de actividades económicas

--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "       'B02752228', 'B02793743', 'B02731099', 'B95992509'], dtype=object)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "max        156.400000  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
        "freq            254            392  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "Name: last_round, dtype: int64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
        "[297 rows x 18 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,7 @@
        "[806 rows x 83 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1909,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2122,7 +2122,7 @@
        "Name: Años desde ultima finanziacion, Length: 806, dtype: int32"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2190,7 @@
        "Name: last_round, dtype: int64"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2243,7 @@
        "Name: Codigo primario CNAE 2009, Length: 131, dtype: int64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2262,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2354,52 +2354,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Inmovilizado mil EUR']=df['Inmovilizado mil EUR'].fillna(df['Inmovilizado material mil EUR']+df['Inmovilizado inmaterial mil EUR'])\n",
-    "df['Activo circulante mil EUR']=df['Activo circulante mil EUR'].fillna(df['Existencias mil EUR'])\n",
-    "df['Total activo mil EUR']=df['Total activo mil EUR'].fillna(df['Inmovilizado mil EUR']+df['Activo circulante mil EUR'])"
+    "df['n_missings']=df.isna().sum(axis=1)\n",
+    "x=df['n_missings']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Fondos propios mil EUR']=df['Fondos propios mil EUR'].fillna(df['Capital suscrito mil EUR']+df['Otros fondos propios mil EUR'])\n",
-    "df['Pasivo fijo mil EUR']=df['Pasivo fijo mil EUR'].fillna(df['Acreedores a L. P. mil EUR']+df['Deudas financieras mil EUR'])\n",
-    "df['Pasivo líquido mil EUR']=df['Pasivo líquido mil EUR'].fillna(df['Deudas financieras mil EUR']+df['Acreedores comerciales mil EUR']+df['Deudas financieras mil EUR'])\n",
-    "df['Total pasivo y capital propio mil EUR']=df['Total pasivo y capital propio mil EUR'].fillna(df['Fondos propios mil EUR']+df['Pasivo fijo mil EUR']+df['Pasivo líquido mil EUR'])"
+    "df['Inmovilizado mil EUR']=df['Inmovilizado mil EUR'].fillna(df['Inmovilizado material mil EUR'].fillna(0)+df['Inmovilizado inmaterial mil EUR'].fillna(0))\n",
+    "df['Activo circulante mil EUR']=df['Activo circulante mil EUR'].fillna(df['Existencias mil EUR'].fillna(0))\n",
+    "df['Total activo mil EUR']=df['Total activo mil EUR'].fillna(df['Inmovilizado mil EUR'].fillna(0)+df['Activo circulante mil EUR'].fillna(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Fondos propios mil EUR']=df['Fondos propios mil EUR'].fillna(df['Capital suscrito mil EUR'].fillna(0)+df['Otros fondos propios mil EUR'].fillna(0))\n",
+    "df['Pasivo fijo mil EUR']=df['Pasivo fijo mil EUR'].fillna(df['Acreedores a L. P. mil EUR'].fillna(0)+df['Deudas financieras mil EUR'])\n",
+    "df['Pasivo líquido mil EUR']=df['Pasivo líquido mil EUR'].fillna(df['Deudas financieras mil EUR'].fillna(0)+df['Acreedores comerciales mil EUR'].fillna(0)+df['Deudas financieras mil EUR'].fillna(0))\n",
+    "df['Total pasivo y capital propio mil EUR']=df['Total pasivo y capital propio mil EUR'].fillna(df['Fondos propios mil EUR']+df['Pasivo fijo mil EUR'].fillna(0)+df['Pasivo líquido mil EUR'].fillna(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Realiza estos calculos si alguna de estas columnas es nula, y sustituye el valor nulo por el calculado\n",
-    "df['Resultado Explotación mil EUR']=(df['Ingresos de explotación mil EUR']).fillna(df['Ingresos de explotación mil EUR']+df['Importe neto Cifra de Ventas mil EUR'])\n",
-    "df['Resultado financiero mil EUR']=df['Resultado financiero mil EUR'].fillna(df['Ingresos de explotación mil EUR']-df['Gastos financieros mil EUR'])\n",
-    "df['Resultado Actividades Ordinarias mil EUR']=df['Resultado Actividades Ordinarias mil EUR'].fillna(df['Result. ordinarios antes Impuestos mil EUR']+df['Impuestos sobre sociedades mil EUR'])\n",
-    "df['Resultado del Ejercicio mil EUR']=df['Resultado del Ejercicio mil EUR'].fillna(df['Resultado Actividades Ordinarias mil EUR'])"
+    "df['Resultado Explotación mil EUR']=(df['Ingresos de explotación mil EUR']).fillna(df['Ingresos de explotación mil EUR'].fillna(0)+df['Importe neto Cifra de Ventas mil EUR'].fillna(0))\n",
+    "df['Resultado financiero mil EUR']=df['Resultado financiero mil EUR'].fillna(df['Ingresos de explotación mil EUR'].fillna(0)-df['Gastos financieros mil EUR'].fillna(0))\n",
+    "df['Resultado Actividades Ordinarias mil EUR']=df['Resultado Actividades Ordinarias mil EUR'].fillna(df['Result. ordinarios antes Impuestos mil EUR'].fillna(0)+df['Impuestos sobre sociedades mil EUR'].fillna(0))\n",
+    "df['Resultado del Ejercicio mil EUR']=df['Resultado del Ejercicio mil EUR'].fillna(df['Resultado Actividades Ordinarias mil EUR'].fillna(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(806, 74)"
+       "(806, 75)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,40 +2420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Codigo_NIF                     0\n",
-      "Nombre_sabi                    0\n",
-      "Fecha constitucion             0\n",
-      "Años en Mercado                0\n",
-      "Codigo primario CNAE 2009      0\n",
-      "                            ... \n",
-      "company_status                 0\n",
-      "valuation_2022               686\n",
-      "b2b                            0\n",
-      "b2c                            0\n",
-      "n_missings                     0\n",
-      "Length: 75, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df.isna().sum(axis=0))\n",
-    "#crea una columna donde diga el total de missings de fila\n",
     "df['n_missings']=df.isna().sum(axis=1)\n",
-    "\n",
-    "x=df['n_missings']"
+    "y=df['n_missings']"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "unaimleal",
+   "display_name": "reto06",
    "language": "python",
    "name": "python3"
   },
@@ -2457,12 +2445,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bd686aeebece3b8f289d0bac030d29030f2b08a70100b875a45333a0faf38b1b"
+    "hash": "8d41c50e2c7e791a2a32a16cf077f7f15aba8d7f30b65740f86a9ceb55e0c6b3"
    }
   }
  },
