--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -5787,11 +5787,29 @@
     "df_valoracion_correlacion = df_valoracion_correlacion.sort_values(by='Correlacion con valuation_2022', ascending=False)\n",
     "print(df_valoracion_correlacion)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# se crea la carpeta de datos limpios\n",
+    "CARPETA_DATOS_LIMPIOS = 'Datos/Limpios/'\n",
+    "if not os.path.exists(CARPETA_DATOS_LIMPIOS):\n",
+    "    os.makedirs(CARPETA_DATOS_LIMPIOS)\n",
+    "\n",
+    "# se guarda el df de adquisicion\n",
+    "df_adquisicion_final.to_csv(CARPETA_DATOS_LIMPIOS + 'df_adquisicion_final.csv', index=False)\n",
+    "\n",
+    "# se guarda el df de valoracion\n",
+    "df_valoracion.to_csv(CARPETA_DATOS_LIMPIOS + 'df_valoracion.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "reto06",
+   "display_name": "unaimleal",
    "language": "python",
    "name": "python3"
   },
@@ -5805,12 +5823,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8d41c50e2c7e791a2a32a16cf077f7f15aba8d7f30b65740f86a9ceb55e0c6b3"
+    "hash": "bd686aeebece3b8f289d0bac030d29030f2b08a70100b875a45333a0faf38b1b"
    }
   }
  },
