actualizacion del .py

--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -593,11 +593,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Quitar columna forma juridica o forma juridica detallada, lo mismo con estado y estado detallado\n",
-    "df= df.drop('Forma juridica detallada', axis=1)\n",
-    "df= df.drop('Estado detallado', axis=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -729,6 +725,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Quitar columna forma juridica o forma juridica detallada, lo mismo con estado y estado detallado\n",
+    "df= df.drop('Forma juridica detallada', axis=1)\n",
+    "df= df.drop('Estado detallado', axis=1)\n",
     "# se quita la columna de n_empleados_dealroom\n",
     "df= df.drop('n_empleados_dealroom', axis=1)\n",
     "# Quitar columnas que no aportan informacion (ejemplo: nombre de la empresa, pagina web, ciudad, etc)\n",
@@ -933,7 +932,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# se crea una funcion para que si una empresa tiene un missing en una columna financiera en un año, \n",
+    "# se crea un for para que si una empresa tiene un missing en una columna financiera en un año, \n",
     "# se sustituye por el del año anterior o posterior\n",
     "\n",
     "for nif in df['Codigo_NIF'].unique():\n",
