--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -2607,16 +2607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(41, 90)"
+       "(26, 90)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2625,16 +2625,8 @@
     "df_finanzas= df_finanzas[df_finanzas['valuation_2022'].isna()]\n",
     "df_finanzas= df_finanzas[df_finanzas['growth_stage']!= 0]\n",
     "df_finanzas= df_finanzas[df_finanzas['n_missings']<1]\n",
+    "df_finanzas= df_finanzas.drop_duplicates(subset=['Codigo_NIF'], keep='first')\n",
     "df_finanzas.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Quitar columnas con muchos missings (ejemplo: deuda)\n"
    ]
   },
   {
@@ -2957,6 +2949,15 @@
    "outputs": [],
    "source": [
     "df_antes_nif= df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables_con_missings_antes_nif= df_antes_nif.isna().sum()[df_antes_nif.isna().sum()>0].sort_values(ascending=False)"
    ]
   },
   {
