--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -5694,10 +5694,10 @@
     "#Realiza estos calculos si alguna de estas columnas es nula, y sustituye el valor nulo por el calculado\n",
     "df_valoracion.loc[:,'Precio/Venta']=(df_valoracion['valuation_2022']/df_valoracion['Importe neto Cifra de Ventas mil EUR_2021'])\n",
     "df_valoracion.loc[:,'Precio/Ebitda']=(df_valoracion['valuation_2022']/df_valoracion['EBITDA mil EUR_2021'])\n",
-    "df_valoracion.loc[:,'Precio/Ebit']=(df_valoracion['valuation_2022']/df_valoracion['EBIT mil EUR_2021'])\n",
+    "df_valoracion.loc[:,'PER']=(df_valoracion['valuation_2022']/df_valoracion['EBIT mil EUR_2021'])\n",
     "\n",
     "#Se reemplazan valores infinitos con valores altos.\n",
-    "df_valoracion.loc[:,'Precio/Venta']=df_valoracion['Precio/Venta'].replace([np.inf, -np.inf], [99999, -99999])"
+    "df_valoracion.loc[:,'Precio/Venta']=df_valoracion['Precio/Venta'].replace([np.inf, -np.inf], [99999, -99999])\n"
    ]
   },
   {
@@ -10385,6 +10385,16 @@
    ],
    "source": [
     "DF_ADQUISICION.columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Reemplazo de valores ausentes\n",
+    "\n",
+    "Inicialmente se han reemplazado tan solo algunas variables, como por ejemplo el número de empleados de sabi con la columna de empleados de dealroom, ya que es más fiable esta primera fuente, pero en caso de no tener datos, se cogen los de dealroom. Después, se han aplicado fórmulas financieras para rellenar los valores ausentes de las variables de financiación, como por ejemplo el activo, patrimonio neto o pasivo. Se ha dado prioridad a este método ya que desde el punto de vista financiero es lo que más se puede aproximar a la realidad, y lo que más sentido tiene. "
    ]
   }
  ],
