columnas nif y nombre empresa en dfs

--- a/modelado_adquisicion.ipynb
+++ b/modelado_adquisicion.ipynb
@@ -3590,105 +3590,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|   iter    |  target   |   depth   | l2_lea... | learni... | subsample |\n",
-      "-------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'CatBoostClassifier' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 40\u001b[0m\n\u001b[0;32m     37\u001b[0m bo \u001b[39m=\u001b[39m BayesianOptimization(catboost_cv, param_limits)\n\u001b[0;32m     39\u001b[0m \u001b[39m# ejecutamos la optimización bayesiana\u001b[39;00m\n\u001b[1;32m---> 40\u001b[0m bo\u001b[39m.\u001b[39;49mmaximize(n_iter\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, init_points\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m)\n\u001b[0;32m     42\u001b[0m \u001b[39m# imprimimos los resultados\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[39mprint\u001b[39m(bo\u001b[39m.\u001b[39mmax)\n",
-      "File \u001b[1;32mc:\\Users\\unaim\\Anaconda3\\envs\\unaimleal\\lib\\site-packages\\bayes_opt\\bayesian_optimization.py:311\u001b[0m, in \u001b[0;36mBayesianOptimization.maximize\u001b[1;34m(self, init_points, n_iter, acquisition_function, acq, kappa, kappa_decay, kappa_decay_delay, xi, **gp_params)\u001b[0m\n\u001b[0;32m    309\u001b[0m     x_probe \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msuggest(util)\n\u001b[0;32m    310\u001b[0m     iteration \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m--> 311\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprobe(x_probe, lazy\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    313\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_bounds_transformer \u001b[39mand\u001b[39;00m iteration \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    314\u001b[0m     \u001b[39m# The bounds transformer should only modify the bounds after\u001b[39;00m\n\u001b[0;32m    315\u001b[0m     \u001b[39m# the init_points points (only for the true iterations)\u001b[39;00m\n\u001b[0;32m    316\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mset_bounds(\n\u001b[0;32m    317\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_bounds_transformer\u001b[39m.\u001b[39mtransform(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_space))\n",
-      "File \u001b[1;32mc:\\Users\\unaim\\Anaconda3\\envs\\unaimleal\\lib\\site-packages\\bayes_opt\\bayesian_optimization.py:208\u001b[0m, in \u001b[0;36mBayesianOptimization.probe\u001b[1;34m(self, params, lazy)\u001b[0m\n\u001b[0;32m    206\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_queue\u001b[39m.\u001b[39madd(params)\n\u001b[0;32m    207\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 208\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_space\u001b[39m.\u001b[39;49mprobe(params)\n\u001b[0;32m    209\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdispatch(Events\u001b[39m.\u001b[39mOPTIMIZATION_STEP)\n",
-      "File \u001b[1;32mc:\\Users\\unaim\\Anaconda3\\envs\\unaimleal\\lib\\site-packages\\bayes_opt\\target_space.py:236\u001b[0m, in \u001b[0;36mTargetSpace.probe\u001b[1;34m(self, params)\u001b[0m\n\u001b[0;32m    234\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_as_array(params)\n\u001b[0;32m    235\u001b[0m params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\u001b[39mzip\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_keys, x))\n\u001b[1;32m--> 236\u001b[0m target \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtarget_func(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)\n\u001b[0;32m    238\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_constraint \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    239\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mregister(x, target)\n",
-      "Cell \u001b[1;32mIn[1], line 11\u001b[0m, in \u001b[0;36mcatboost_cv\u001b[1;34m(learning_rate, depth, l2_leaf_reg, subsample)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39mFunción de evaluación de CatBoost utilizando validación cruzada.\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[39m# definimos el modelo con los parámetros a optimizar\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m model \u001b[39m=\u001b[39m CatBoostClassifier(\n\u001b[0;32m     12\u001b[0m     learning_rate\u001b[39m=\u001b[39mlearning_rate,\n\u001b[0;32m     13\u001b[0m     depth\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m(depth),\n\u001b[0;32m     14\u001b[0m     l2_leaf_reg\u001b[39m=\u001b[39ml2_leaf_reg,\n\u001b[0;32m     15\u001b[0m     subsample\u001b[39m=\u001b[39msubsample,\n\u001b[0;32m     16\u001b[0m     iterations\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m,\n\u001b[0;32m     17\u001b[0m     loss_function\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMultiClass\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m     18\u001b[0m     objective\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[0;32m     19\u001b[0m     eval_metric\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mAUC\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     20\u001b[0m     random_seed\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m,\n\u001b[0;32m     21\u001b[0m     verbose\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m     22\u001b[0m )\n\u001b[0;32m     24\u001b[0m \u001b[39m# calculamos la precisión media utilizando validación cruzada\u001b[39;00m\n\u001b[0;32m     25\u001b[0m scores \u001b[39m=\u001b[39m cross_val_score(model, X_train_missings, y_train_missings, cv\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, scoring\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mroc_auc\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'CatBoostClassifier' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# optimizacion de catboost\n",
-    "\n",
-    "from bayes_opt import BayesianOptimization\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "def catboost_cv(learning_rate, depth, l2_leaf_reg, subsample):\n",
-    "    \"\"\"\n",
-    "    Función de evaluación de CatBoost utilizando validación cruzada.\n",
-    "    \"\"\"\n",
-    "    # definimos el modelo con los parámetros a optimizar\n",
-    "    model = CatBoostClassifier(\n",
-    "        learning_rate=learning_rate,\n",
-    "        depth=int(depth),\n",
-    "        l2_leaf_reg=l2_leaf_reg,\n",
-    "        subsample=subsample,\n",
-    "        iterations=1000,\n",
-    "        loss_function='MultiClass', \n",
-    "        objective=3,\n",
-    "        eval_metric='AUC',\n",
-    "        random_seed=42,\n",
-    "        verbose=False,\n",
-    "    )\n",
-    "\n",
-    "    # calculamos la precisión media utilizando validación cruzada\n",
-    "    scores = cross_val_score(model, X_train_missings, y_train_missings, cv=5, scoring='roc_auc')\n",
-    "    return np.mean(scores)\n",
-    "\n",
-    "# definimos los límites para cada parámetro a optimizar\n",
-    "param_limits = {\n",
-    "    'learning_rate': (0.01, 0.5),\n",
-    "    'depth': (3, 8),\n",
-    "    'l2_leaf_reg': (1, 10),\n",
-    "    'subsample': (0.5, 1)\n",
-    "}\n",
-    "\n",
-    "# creamos el objeto BayesOpt con la función de evaluación y los límites de los parámetros\n",
-    "bo = BayesianOptimization(catboost_cv, param_limits)\n",
-    "\n",
-    "# ejecutamos la optimización bayesiana\n",
-    "bo.maximize(n_iter=10, init_points=10)\n",
-    "\n",
-    "# imprimimos los resultados\n",
-    "print(bo.max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# se guardan los modelos que mejor resultado han dado\n",
     "# se crea carpeta de modelos si no existe\n",
-    "if not os.path.exists('models'):\n",
-    "    os.makedirs('models')\n",
+    "if not os.path.exists('modelos'):\n",
+    "    os.makedirs('modelos')\n",
     "\n",
     "# dentro de esa carpeta se crea otra carpeta para los modelos de clasificacion\n",
-    "if not os.path.exists('models/clasificacion'):\n",
-    "    os.makedirs('models/clasificacion')\n",
+    "if not os.path.exists('modelos/clasificacion'):\n",
+    "    os.makedirs('modelos/clasificacion')\n",
     "\n",
     "# se guarda el modelo de gradient boosting en la carpeta de modelos\n",
-    "pickle.dump(gbc_missing, open('models/clasificacion/gbc_model.pkl', 'wb'))\n",
+    "pickle.dump(gbc_missing, open('modelos/clasificacion/gbc_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de random forest\n",
-    "pickle.dump(rf_mejorado, open('models/clasificacion/rfc_model.pkl', 'wb'))\n",
+    "pickle.dump(rf_mejorado, open('modelos/clasificacion/rfc_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de catboost\n",
-    "pickle.dump(cbc, open('models/clasificacion/cbc_model.pkl', 'wb'))\n",
+    "pickle.dump(cbc, open('modelos/clasificacion/cbc_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de regresion logistica\n",
-    "pickle.dump(logreg, open('models/clasificacion/lr_model.pkl', 'wb'))"
+    "pickle.dump(logreg, open('modelos/clasificacion/lr_model.pkl', 'wb'))"
    ]
   }
  ],
