--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "max        156.400000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "(56,)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
        "[305 rows x 18 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
        "391            NaN           0.0    operational             NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
        "[824 rows x 85 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2427,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2471,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -2495,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2508,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2535,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2608,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
        "(26, 92)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2642,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2653,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2696,7 +2696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2705,7 @@
        "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2716,7 +2716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2728,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2740,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -2758,7 +2758,7 @@
        "577"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2769,7 +2769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3133,7 +3133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\unaim\\AppData\\Local\\Temp\\ipykernel_20780\\3926541681.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\unaim\\AppData\\Local\\Temp\\ipykernel_20884\\3926541681.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  df.corr()['Deudas financieras mil EUR'].sort_values(ascending=False)\n"
      ]
     },
@@ -3210,7 +3210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\unaim\\AppData\\Local\\Temp\\ipykernel_20780\\2077134611.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\unaim\\AppData\\Local\\Temp\\ipykernel_20884\\2077134611.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  df.corr()['Ingresos de explotacion mil EUR'].sort_values(ascending=False) # deudores tiene una correlacion muy alta\n"
      ]
     },
@@ -5855,7 +5855,7 @@
    "source": [
     "#Calculamos la correlación de la columna 'valuation_2022' con todas las demás columnas, pero en valor absoluto.\n",
     "correlacion = df_valoracion.corr()['valuation_2022']\n",
-    "df_valoracion_correlacion_valor_absoluto = pd.DataFrame({'Variables': correlacion.index, 'Correlacion con valuation_2022': correlacion.abs().values})\n",
+    "df_valoracion_correlacion_valor_absoluto = pd.DataFrame({'Variables': correlacion.index, 'Correlacion con valuation_2022': correlacion.abs().values}).sort_values(by='Correlacion con valuation_2022', ascending=False)\n",
     "df_valoracion_correlacion_valor_absoluto = df_valoracion_correlacion_valor_absoluto.sort_values(by='Correlacion con valuation_2022', ascending=False)\n",
     "print(df_valoracion_correlacion_valor_absoluto)"
    ]
@@ -5981,6 +5981,7 @@
    "outputs": [],
    "source": [
     "#Se eliminan las variables identificadoras\n",
+    "columnas_valoracion_nif_nombre= df_valoracion['Codigo_NIF','Nombre_sabi']\n",
     "df_valoracion=df_valoracion.drop([\"Codigo_NIF\",'Nombre_sabi'],axis=1)"
    ]
   },
@@ -6200,11 +6201,9 @@
     "\n",
     "x = df_valoracion_seleccionado.iloc[:,1:]\n",
     "y= df_valoracion_seleccionado['valuation_2022']\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.25, random_state=0)\n",
-    "\n",
     "\n",
     "rf = RandomForestRegressor (random_state=0)\n",
-    "rf.fit(x_train, y_train)\n",
+    "rf.fit(x, y)\n",
     "\n",
     "print(dict(zip(df.columns, rf.feature_importances_.round(2))))\n",
     "\n",
